# Translator_sdk

./: .gitignore  pyproject.toml
.github/workflows/: codespell.yml  main.yml
Translator_sdk/: __init__.py  node_annotator.py  translator_query.py
tests/: test_nameres.py  test_node_annotator.py  test_nodenorm.py
