[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Translator_sdk"
version = "0.0.1"
description = "Translator SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Guangrong Qin, Yue Zhang"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "jsons",
    "pandas",
    "networkx",
    "numpy",
    'networkx',
]

[project.scripts]
tct-server = "main:main"

[project.urls]
Homepage = "https://github.com/NCATSTranslator/Translator_sdk"
Documentation = "https://ncatstranslator.github.io/Translator_sdk/"
Repository = "https://github.com/NCATSTranslator/Translator_sdk"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "codespell>=2.2.0",
    "mypy>=1.14.1",
]

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=Translator_sdk",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",
    "--tb=short",
    "-v"
]

[tool.ruff]
exclude = ["notebooks/"]

[tool.hatch.build.targets.wheel]
packages = ["Translator_sdk"]
